--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/renderer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,9 @@
     "exceljs": "^4.4.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   }
 }
-
