--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "deploy": "gh-pages -d dist"
+    "start": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,8 @@
     "exceljs": "^4.4.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0",
-    "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
