--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "css-loader": "^7.1.2",
     "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "3.4.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   }
 }
-
