--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "main": "src/renderer.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack",
+        "start": "webpack serve --mode development",
+        "build": "webpack --mode production",
+        "preview": "serve dist -p 8080",
         "deploy": "gh-pages -d dist",
-        "start": "webpack serve --open",
+        "clean": "rm -rf dist",
         "format": "npx prettier --write ."
     },
     "keywords": [],
